# c2p_desafio2

./: .gitignore  README.md  modelo.xlsx  msec.py  pyproject.toml  requirements.txt
relatorios/: msec_06nov2025.xlsx  msec_07nov2025.xlsx
