[project]
name = "c2p_anbima"
version = "0.1.0"
description = "Projeto Python criado com mise e uv"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "openpyxl>=3.1.5",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/c2p_anbima"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
